syntax = "proto3";
package reapchain.libs.bits;

option go_package = "github.com/reapchain/reapchain/proto/reapchain/libs/bits";

message BitArray {
  int64           bits  = 1;
  repeated uint64 elems = 2;
}
